[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/AudioStuff.gd" type="Script" id=1]
[ext_resource path="res://Fonts/SourceCodePro-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/ui/testui.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
use_filter = true
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.470588, 0.223529, 0.223529, 1 )

[node name="Spacer thing" type="Sprite" parent="."]
position = Vector2( 274, -59.3384 )
scale = Vector2( 0.510319, 0.703704 )
texture = ExtResource( 3 )
offset = Vector2( -266.5, 138.323 )

[node name="Spacer thing4" type="Sprite" parent="Spacer thing"]
position = Vector2( 331.561, 220.744 )
rotation = 3.14159
scale = Vector2( 1.52454, -0.673579 )
texture = ExtResource( 3 )
offset = Vector2( 13.8105, 7.45532 )

[node name="Spacer thing3" type="Sprite" parent="Spacer thing"]
position = Vector2( 1104.59, 220.744 )
scale = Vector2( 1.53309, 0.673239 )
texture = ExtResource( 3 )
offset = Vector2( 13.8105, 7.45532 )

[node name="Spacer thing2" type="Sprite" parent="Spacer thing"]
position = Vector2( 544.43, 322.981 )
rotation = 3.14159
scale = Vector2( 0.999375, -0.977684 )
texture = ExtResource( 3 )
offset = Vector2( -1160.95, -187.177 )

[node name="open2" type="Node" parent="."]

[node name="Spacer thing4" type="Sprite" parent="open2"]
position = Vector2( 443.202, 255 )
rotation = 3.14159
scale = Vector2( 0.778002, -0.474 )
texture = ExtResource( 3 )
offset = Vector2( 13.8105, 7.45532 )

[node name="Spacer thing5" type="Sprite" parent="open2"]
position = Vector2( 837.693, 255 )
scale = Vector2( 0.782365, 0.473761 )
texture = ExtResource( 3 )
offset = Vector2( 13.8105, 7.45532 )

[node name="ColorRect2" type="ColorRect" parent="open2"]
margin_left = 588.0
margin_top = 232.0
margin_right = 700.0
margin_bottom = 282.0
color = Color( 0.67451, 0.196078, 0.196078, 1 )

[node name="fullscren" type="RichTextLabel" parent="open2"]
margin_left = 568.0
margin_top = 240.0
margin_right = 976.0
margin_bottom = 360.0
custom_fonts/normal_font = SubResource( 2 )
text = "Fullscreen
"

[node name="on" type="RichTextLabel" parent="open2"]
margin_left = 640.0
margin_top = 321.0
margin_right = 1048.0
margin_bottom = 441.0
rect_pivot_offset = Vector2( -419, 267 )
custom_fonts/normal_font = SubResource( 2 )
text = "On"

[node name="CheckBox" type="CheckBox" parent="open2"]
margin_left = 576.0
margin_top = 309.0
margin_right = 600.0
margin_bottom = 333.0
rect_scale = Vector2( 2.65726, 2.41556 )

[node name="open3" type="Node" parent="."]

[node name="Spacer thing4" type="Sprite" parent="open3"]
position = Vector2( 443.202, 410 )
rotation = 3.14159
scale = Vector2( 0.778002, -0.474 )
texture = ExtResource( 3 )
offset = Vector2( 13.8105, 7.45532 )

[node name="Spacer thing5" type="Sprite" parent="open3"]
position = Vector2( 837.693, 410 )
scale = Vector2( 0.782365, 0.473761 )
texture = ExtResource( 3 )
offset = Vector2( 13.8105, 7.45532 )

[node name="ColorRect2" type="ColorRect" parent="open3"]
margin_left = 588.0
margin_top = 388.0
margin_right = 700.0
margin_bottom = 438.0
color = Color( 0.67451, 0.196078, 0.196078, 1 )

[node name="thanks" type="RichTextLabel" parent="open3"]
margin_left = 480.0
margin_top = 392.0
margin_right = 888.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( -419, 267 )
custom_fonts/normal_font = SubResource( 2 )
text = "Thank you for playing!!
"

[node name="options" type="RichTextLabel" parent="."]
margin_left = 1107.0
margin_top = 16.0
margin_right = 1515.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( -419, 267 )
custom_fonts/normal_font = SubResource( 2 )
text = "Options
"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 588.0
margin_top = 74.0
margin_right = 700.0
margin_bottom = 124.0
color = Color( 0.67451, 0.196078, 0.196078, 1 )

[node name="masteraudio2" type="RichTextLabel" parent="."]
margin_left = 534.0
margin_top = 81.0
margin_right = 942.0
margin_bottom = 201.0
custom_fonts/normal_font = SubResource( 2 )
text = "Master Audio
"

[node name="thanku" type="RichTextLabel" parent="."]
margin_left = 432.0
margin_top = 448.0
margin_right = 896.0
margin_bottom = 792.0
custom_fonts/normal_font = SubResource( 2 )
text = "Made for the Game Off 2022    hosted by Github."

[node name="Button" type="Button" parent="."]
margin_left = 32.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "Back"
flat = true

[node name="HSlider" type="HSlider" parent="."]
margin_left = 432.0
margin_top = 160.0
margin_right = 684.0
margin_bottom = 176.0
rect_scale = Vector2( 1.6, 1.88 )
min_value = -45.0
max_value = 0.0

[connection signal="pressed" from="open2/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
